# nlp_project

./: README.md  pyproject.toml  requirements.txt
outputs/: final_results_summary.json
outputs/exp1&2/: E1_E2_results.json  E1_metrics.csv  E2_layer_profile.csv  attention_entropy_metrics.json  attention_entropy_scores.csv  exp1_exp2_table_final.csv  exp1_exp2_table_final.md  logit_confidence_metrics.json  logit_confidence_scores.csv  logit_confidence_scores_smoke.csv
outputs/exp3_full/: E3_component_layer_heatmap.csv  experiment3_activation_patching_details.jsonl  experiment3_activation_patching_report.md  experiment3_activation_patching_summary.json
outputs/exp4_temporal_precedence/: experiment4_mann_whitney_tests.csv  experiment4_temporal_precedence_report.md  experiment4_temporal_precedence_summary.json  experiment4_temporal_precedence_table.csv
outputs/exp5_halueval/: experiment5_halueval_transfer_all_tasks_summary.json  experiment5_halueval_transfer_all_tasks_table.csv  experiment5_halueval_transfer_all_tasks_table.md  experiment5_halueval_transfer_summary.json  experiment5_halueval_transfer_table.csv  (+1 more)
scripts/: build_exp12_table.py  build_exp5_halueval_table.py  build_exp6_8_analysis.py  compute_attention_entropy_baseline.py  compute_logit_confidence_baseline.py  convert_halueval_to_exp1.py  convert_ragtruth_to_exp1.py  exp1_2_compute_metrics.py  exp1_2_fit_train_stats.py  exp1_generate_artifacts.py  experiment3_activation_patching.py  plot_experiment3_heatmap.py  run_experiment4_temporal_precedence.py
tests/: test_person1_pipeline.py
(+22 files in other folders)
